infra/kustomize/kubernetes-dashboard/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard
  namespace: monitoring
spec:
  parentRefs:
    - name: public
      namespace: gateway
  hostnames:
    - kubernetes.62a.quanianitis.com
  rules:
    - backendRefs:
        - name: kubernetes-dashboard
          port: 80
